--- a/www/contacto.html
+++ b/www/contacto.html
@@ -6,27 +6,27 @@
 	  </div>
 	  <div class="block no-margin-top">Te esperamos de lunes a viernes de 9 a 20hs!</div>
       <div class="display-flex justify-content-center block-strong no-margin-bottom">
-        <div class="chip">
+        <a class="chip link external bg-color-black" href="http://facebook.com">
           <div class="chip-media bg-color-blue">
             <i class="icon f7-icons">logo_facebook</i>
           </div>
           <div class="chip-label">Facebook</div>
-        </div>
-        <div class="chip">
+        </a>
+        <a class="chip link external bg-color-black margin-left margin-right" href="http://instagram.com">
           <div class="chip-media bg-color-red">
           	<i class="icon f7-icons">logo_instagram</i>
           </div>
           <div class="chip-label">Instagram</div>
-        </div>
-        <div class="chip">
+        </a>
+        <a class="chip link external bg-color-black" href="http://twitter.com">
           <div class="chip-media bg-color-lightblue">
             <i class="icon f7-icons">logo_twitter</i>
           </div>
           <div class="chip-label">Twitter</div>
-        </div>
+        </a>
       </div>
-      <div class="display-flex justify-content-center block-strong no-margin-top no-padding">
-      	<div class="chip">
+      <div class="display-flex justify-content-center block-strong no-margin-top no-padding-top">
+      	<div class="chip bg-color-black">
           <div class="chip-media bg-color-green">
             <i class="icon f7-icons">envelope_fill</i>
           </div>
